# ONE

./: .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REVIEW.md  mkdocs.yml  one.env.example  pyproject.toml  set-flux-hf-token.ps1  set-nvidia-nemotron.ps1  start-flux.ps1  start-one.ps1  stop-flux.ps1  stop-one.ps1  sync-one-github.ps1  test-nvidia-nemotron.ps1  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_eval.yml  pearl_model_validation.yml
browser-extension/: README.md  background.js  content_script.js  manifest.json
configs/openjarvis/: config.toml
deploy/docker/: Dockerfile  Dockerfile.gpu  Dockerfile.gpu.rocm  docker-compose.gpu.nvidia.yml
deploy/windows/: README.md  install.ps1  jarvis-service.ps1
docs/: ONE_LOCAL_MODEL_INVENTORY.md  ROADMAP.md  downloads.md  gen_install_script.py  index.md  leaderboard.md  one-revenue-pipeline.md  telemetry.md
docs/architecture/: skills.md
docs/design/: 2026-05-05-apple-silicon-pearl-mining-design.md  2026-05-05-apple-silicon-pearl-mining-plan-v1.md  2026-05-05-pearl-coordination-discussion-draft.md  2026-05-05-vllm-pearl-mining-integration-design.md  2026-05-05-vllm-pearl-mining-integration-plan.md
docs/development/: contributing.md  mining-nvidia-validation.md  mining.md  release-checklist.md
docs/getting-started/: configuration.md  install.md  installation.md  quickstart.md  windows-native.md  wsl2.md
docs/javascripts/: leaderboard.js
docs/showcase/: CONTRIBUTING.md  coding-assistant.md  cost-savings.md  discord-companion.md  index.md  morning-brief.md  persistent-memory.md
docs/stylesheets/: extra.css
docs/testing/: agent-qa-runbook.md
docs/tutorials/: index.md  skills-workflow.md
docs/user-guide/: agents.md  channels-and-connectors.md  channels.md  chat-simple.md  cli.md  code-assistant.md  deep-research.md  evaluations.md  mcp-external-servers.md  mining-apple-silicon.md  morning-digest.md  pearl.md  scheduled-monitor.md  tools.md
examples/twitter_bot/: slack_preview.py  test_grounding.py  test_real_world.py  twitter_bot.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
rust/: Cargo.toml  rust-toolchain.toml
scripts/: bump-desktop-version.sh  index_docs.py  install_one_knowledge_skills.ps1  oauth_all.py  one_agent_worker.py  one_flux_server.py  one_git_autosync.ps1  quickstart.sh  smoke_framework_comparison.sh
scripts/install/: bg-orchestrator.sh  build-extension.sh  install-rust.sh  install.sh  jarvis-uninstall.sh  jarvis-wrapper.sh  pull-model.sh
skills/one-local-transcription/: SKILL.md
skills/one-memory-curator/: SKILL.md
src/: sitecustomize.py
src/openjarvis/: __init__.py  _rust_bridge.py  sdk.py
tests/: conftest.py  test_digest_integration.py  test_query_orchestrator.py  test_vision.py
tests/a2a/: test_a2a.py
tests/agents/: conftest.py  fake_engine.py  scenario_harness.py  test_agent_lifecycle_scenarios.py  test_base_agent.py  test_budget.py  test_channel_agent.py  test_channel_agent_integration.py  test_claude_code.py  test_config_defaults.py  test_continuation.py  test_deep_research.py  test_deep_research_integration.py  test_deep_research_prompt.py  test_digest_store.py  test_executor_ephemeral.py  test_executor_error_detail.py  test_executor_tools.py  test_fake_engine.py  test_learning_integration.py  test_loop_guard.py  test_loop_guard_warn.py  test_manager.py  test_manager_recover.py  test_monitor_operative.py  test_morning_digest.py  test_native_openhands.py  test_native_react.py  test_opencode_agent.py  test_orchestrator.py  test_persona_persistent.py  test_rlm.py  test_rlm_repl.py  test_scenario_harness_smoke.py  test_simple.py  test_stall.py  test_suggest_action.py  test_system_prompt_builder_integration.py  test_template_prompts.py  test_trace_recording.py
tests/bench/: test_energy.py  test_latency.py
tests/channels/: channel_test_helpers.py  conftest.py  test_agent_channel_e2e.py  test_bluebubbles.py  test_channel_config.py  test_channel_contract.py  test_channel_registry.py  test_channels_phase21.py  test_discord_channel.py  test_email_channel.py  test_feishu.py  test_google_chat.py  test_imessage_daemon.py  test_irc_channel.py  test_matrix_channel.py  test_mattermost.py  test_sendblue.py  test_signal_channel.py  test_slack.py  test_slack_messaging.py  test_stubs.py  test_teams.py  test_telegram.py  test_tier1_gmail.py  test_twilio_sms.py  test_twitter_bot_e2e.py  test_twitter_channel.py  test_webchat.py  test_whatsapp.py  test_whatsapp_baileys.py
tests/cli/: test_add_cmd.py  test_agent_cmd.py  test_ask_context.py  test_ask_vision.py  test_bench_cmd.py  test_bench_skills_command.py  test_channel_cmd.py  test_chat_cmd.py  test_cli.py  test_config_cmd.py  test_config_set.py  test_connect.py  test_daemon_cmd.py  test_deep_research_setup.py  test_digest_cmd.py  test_doctor_cmd.py  test_doctor_labels.py  test_eval_cmd_external_flags.py  test_hints.py  test_init_guidance.py  test_init_host.py  test_log_config.py  test_memory_cmd.py  test_model_cmd.py  test_model_pull.py  test_optimize_skills_command.py  test_pearl_cmd.py  test_quickstart.py  test_registry_cmd.py  test_scan.py  test_serve_channel_wiring.py  test_serve_model_resolution.py  test_serve_single_build.py  test_skill_cmd.py  test_telemetry_cmd.py  test_tool_cmd.py  test_vault_cmd.py
tests/connectors/: test_apple_contacts.py  test_apple_health.py  test_apple_music.py  test_apple_notes.py  test_attachment_store.py  test_chunker.py  test_connector_health.py  test_connectors_router_oauth.py  test_dropbox.py  test_embedding_store.py  test_gcalendar.py  test_gcontacts.py  test_gdrive.py  test_github_notifications.py  test_google_tasks.py  test_hackernews.py  test_imessage.py  test_incremental_sync.py  test_live_smoke.py  test_new_connectors_live.py  test_news_rss.py  test_notion.py  test_oauth_flow.py  test_obsidian.py  test_oura.py  test_outlook.py  (+9 more)
(+1021 files in other folders)
